--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Kakou Moïse",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
