--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "lru-cache": "^10.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
