--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-# .env (variables partagées)
-VITE_API_URL=http://localhost:2013
+# backend/.env.backend
+PORT=2013
 MONGODB_URI= mongodb+srv://admin_isaac:D2F5d0Ya9i6RBIGA@ace-backend.sjzi9gr.mongodb.net/?retryWrites=true&w=majority&appName=ACE-Backend
