--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 # backend/.env.backend
 PORT=2013
-MONGODB_URI= mongodb+srv://admin_isaac:D2F5d0Ya9i6RBIGA@ace-backend.sjzi9gr.mongodb.net/?retryWrites=true&w=majority&appName=ACE-Backend
+MONGODB_URI= mongodb://admin_isaac:D2F5d0Ya9i6RBIGA@ac-vyriuop-shard-00-00.sjzi9gr.mongodb.net:27017,ac-vyriuop-shard-00-01.sjzi9gr.mongodb.net:27017,ac-vyriuop-shard-00-02.sjzi9gr.mongodb.net:27017/?ssl=true&replicaSet=atlas-112d7f-shard-0&authSource=admin&retryWrites=true&w=majority&appName=ACE-Backend
